<resources>
    <string name="app_name">Article</string>
    <string name="app_lan_en">a b c d e f g h i j k l m n o p q r s t u v w x y z</string>
    <string name="app_lan_fa">ا آ ب پ ت ث ج چ ح خ د ذ ر ز ژ س ش ص ض ط ظ ع غ ف ق ک گ ل م ن و ه ی</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="searchbar">Search…</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="registration_text">Helium Plus is a platform for sharing ideas and thoughts of leading people in the field of science and knowledge.</string>
    <string name="do_not_have_account">Don`t have an account?</string>
    <string name="register">Register.</string>
    <string name="already_registered">Already registered?</string>
    <string name="enter">Enter.</string>
    <string name="first_last_name">First and Lastname</string>
    <string name="first_name">ّFirst Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">First and Lastname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="signup_success">Your Registration Was Successful.</string>
    <string name="signup_error">Error Occurred During Registration.</string>
    <string name="signin_success">You Have Successfully Entered.</string>
    <string name="signin_error">You Are not Allowed to Enter.</string>
    <string name="bookmark">Bookmark</string>
    <string name="my_article">My Article</string>
    <string name="publish_new_article">Publish New Article</string>
    <string name="article_title">Enter The Title of your Article</string>
    <string name="article_text">Enter The Text of your Article</string>
    <string name="add_to_bookmark">Article Added To Bookmarks</string>
    <string name="remove_from_bookmark">Article Remove From Bookmarks</string>
    <string name="posts">posts</string>
    <string name="tags">tags</string>
    <string name="users">users</string>
    <string name="prefix_phone_number">+98</string>
    <string name="todo">TODO</string>
    <string name="plus">+</string>
    <string name="add_tag">Add Tags</string>
    <string name="back_again">Click again to Exit</string>
    <string name="date_example">21 فرودین 1401</string>
    <string name="username_example">محمد سبحان</string>
    <string name="save_article_success">Imports Article Successful</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="lorem_title">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</string>
    <string name="chip_title_example">نجوم</string>
    <string name="select">select</string>
    <string name="select_tage">Select Tage</string>
    <string name="mobile_incorrect">the phone number is incorrect</string>
    <string name="full_name_incorrect">the full name is incorrect</string>
    <string name="password_incorrect">the password is incorrect</string>
    <string name="username_incorrect">the username is incorrect</string>
    <string name="email_incorrect">the email is incorrect</string>
    <string name="not_found">Not Found Any Data!</string>
    <string name="error_empty_input">Complete the requested information</string>
    <string name="error_english_letters">Only Persian characters are allowed</string>
    <string name="error_persian_letters">Only English characters are allowed</string>
    <string name="error_least_six_letters">Enter at least 6 characters</string>
    <string name="error_email_address">The email entered is not valid</string>
    <string name="error_phone_number">Number entered is not valid</string>
    <string name="error_validation">Please enter the values correctly</string>
    <string name="read_time_format">%1$s min read</string>
    <string name="failure_request">An error occurred while connecting to the server!</string>
    <string name="internet_not_connected">Your device is not connected to the Internet!</string>

</resources>